--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
 			          "test": "mocha test.js"
 				    },
 				      "dependencies": {
-					          "mocha": "^9.1.3"
-						    },
-						      "devDependencies": {
-							          "assert": "^2.0.0"
-								    }
+					          "express": "^4.17.1",
+						      "chai": "^4.3.4",
+						          "chai-http": "^4.3.0"
+							    }
 }
 
